259. Creating a text vectoriser to map our tokens (text) to numbers

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e15lhSphBQBM",
-        "outputId": "9912da45-6b32-491d-b3d3-f56b9c9773d9"
+        "outputId": "8d426b7e-8915-416b-badf-8c205cfb00f5"
       },
       "source": [
         "!nvidia-smi -L"
@@ -71,7 +71,7 @@
         {
           "output_type": "stream",
           "text": [
-            "GPU 0: Tesla T4 (UUID: GPU-5f754433-a6c0-65fa-555e-b251e98c3586)\n"
+            "GPU 0: Tesla T4 (UUID: GPU-c2b022a4-21c7-70fb-18d0-1a8853933a76)\n"
           ],
           "name": "stdout"
         }
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYhWiiA8Cju9",
-        "outputId": "3d3cbf50-5c70-496c-efc3-2732ea35a483"
+        "outputId": "d971c920-4fa0-4e7c-fed1-37ee72ff2111"
       },
       "source": [
         "!git clone https://github.com/Franck-Dernoncourt/pubmed-rct\n",
@@ -130,7 +130,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_JevalUXDYYj",
-        "outputId": "b47eade1-6272-4324-bd24-18eaf8d93645"
+        "outputId": "32bf6872-d504-4b57-a2ac-4951ca94a789"
       },
       "source": [
         "# Check what files are in the PubMed_20K dataset\n",
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kDLjWWDBE1fo",
-        "outputId": "a6bf5089-e9ee-4bb6-d5f7-15c51305c62c"
+        "outputId": "6bb8f795-1b06-46a9-d6e0-de67d4d660df"
       },
       "source": [
         "# Check all of the filenames in the target directory \n",
@@ -182,8 +182,8 @@
           "data": {
             "text/plain": [
               "['/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/dev.txt',\n",
-              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/train.txt',\n",
-              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/test.txt']"
+              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/test.txt',\n",
+              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/train.txt']"
             ]
           },
           "metadata": {
@@ -239,7 +239,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12d2ac1e-4347-4e01-b904-077b7ead5735"
+        "outputId": "e2a9d145-fe28-455b-e264-198755aa6c40"
       },
       "source": [
         "# Let's read in the training lines\n",
@@ -296,7 +296,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e59edbab-8544-44bd-8c52-6059552faa8c"
+        "outputId": "0203216a-fca4-4289-b230-5c449920f0bb"
       },
       "source": [
         "len(train_lines)"
@@ -392,7 +392,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wWk8FwfEbhme",
-        "outputId": "d9a492d5-0cd8-4122-c739-b7dcb80b0bbf"
+        "outputId": "c0fb1b28-cc43-4167-cd0e-d48534988496"
       },
       "source": [
         "# Get data from file and preprocess it\n",
@@ -408,8 +408,8 @@
           "output_type": "stream",
           "text": [
             "180040 30212 30135\n",
-            "CPU times: user 468 ms, sys: 99 ms, total: 567 ms\n",
-            "Wall time: 570 ms\n"
+            "CPU times: user 523 ms, sys: 86.2 ms, total: 609 ms\n",
+            "Wall time: 616 ms\n"
           ],
           "name": "stdout"
         }
@@ -422,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ApFKvvNocl2h",
-        "outputId": "ce3a9715-049b-4e88-cc3d-84a9594486b4"
+        "outputId": "29b24f22-020a-41bd-d1f2-d002db68476f"
       },
       "source": [
         "# Check the first abstract of our training  data\n",
@@ -516,7 +516,7 @@
           "height": 483
         },
         "id": "efTctER8c7ga",
-        "outputId": "8b121cbe-dc2f-4844-a549-4edfda01fb6d"
+        "outputId": "0c8a0143-5a0a-4dbc-b48e-88bed1ea94e9"
       },
       "source": [
         "import pandas as pd\n",
@@ -692,7 +692,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B7UIQop8939p",
-        "outputId": "73e2e752-83e2-4421-8ac1-037f15d85b99"
+        "outputId": "17ac2183-ef71-4152-a593-079442d975b4"
       },
       "source": [
         "# Distribution of labels in training data\n",
@@ -727,7 +727,7 @@
           "height": 267
         },
         "id": "kRFmpmQ8-H_K",
-        "outputId": "bf5413c2-7d06-47c8-f82e-0c9aff5fde89"
+        "outputId": "ad91baf2-3a59-4b05-d0b7-5b36bad7a0db"
       },
       "source": [
         "# Let's check the length of different lines\n",
@@ -766,7 +766,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nJzqUxaD-8lR",
-        "outputId": "3ce38fa4-eef6-45a2-c525-30382e8ee72c"
+        "outputId": "f7a58f27-4ad5-49b8-e50c-2bbfb7b72f77"
       },
       "source": [
         "# Convert abstract text lines into lists\n",
@@ -798,7 +798,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tfhz2zfOABQW",
-        "outputId": "18b662f9-21b4-45bc-9b70-9c69ea671e94"
+        "outputId": "aa77c219-4973-4035-8556-dde548f6a52a"
       },
       "source": [
         "# View the 10 lines of training sentences\n",
@@ -845,7 +845,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MnCl-CDyAIbu",
-        "outputId": "ff8dcb1a-9cbf-4611-99fb-0cb58730b44e"
+        "outputId": "bf9c5f40-abb2-4dac-b4a3-638d3bb53090"
       },
       "source": [
         "# One hot encode labels\n",
@@ -887,7 +887,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NQfrfJgsDfQi",
-        "outputId": "829aa52e-1ba0-4995-e365-039f3a239cfc"
+        "outputId": "be3a32b7-31a2-4282-ae1d-585215209f9c"
       },
       "source": [
         "## Label encode labels\n",
@@ -925,7 +925,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cSFEakNYEI30",
-        "outputId": "1a228e47-b2c6-4d45-ba1d-1c084d404d32"
+        "outputId": "83df4aae-a709-471b-ec1c-94e4b44e2b6c"
       },
       "source": [
         "# Get class names and number of classes from LabelEncoder instance\n",
@@ -982,7 +982,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "64eadbf3-9ec4-408c-f3fe-34d10693d954"
+        "outputId": "c4531e8e-76f4-4e69-f4fe-08925bf3f357"
       },
       "source": [
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -1037,7 +1037,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d2d3fc39-0e59-46bc-b3fc-88daf0c0219f"
+        "outputId": "394dc5cd-bece-419b-c3d1-85e4b1bcd270"
       },
       "source": [
         "# EValuate baseline mdoel on validation dataset\n",
@@ -1067,7 +1067,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6ce23aa-ab6d-43ed-af5a-fcd21384607a"
+        "outputId": "6555e141-992b-437e-ed34-241551afb620"
       },
       "source": [
         "# Make prediction using our baseline model\n",
@@ -1108,7 +1108,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c4c5166-86f4-48ba-dfcd-54088083b2df"
+        "outputId": "80f8609c-4145-405f-9d24-a8db73e3785f"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
@@ -1118,16 +1118,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2021-08-08 18:26:10--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
+            "--2021-08-09 23:50:33--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 10246 (10K) [text/plain]\n",
             "Saving to: ‘helper_functions.py’\n",
             "\n",
-            "\rhelper_functions.py   0%[                    ]       0  --.-KB/s               \rhelper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
+            "helper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-08-08 18:26:10 (77.1 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
+            "2021-08-09 23:50:34 (86.1 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
             "\n"
           ],
           "name": "stdout"
@@ -1152,7 +1152,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0064c67e-7ddf-4de7-86bb-38052f75d0ee"
+        "outputId": "8d301a18-75b6-4eec-87f1-7cbd549c9cd6"
       },
       "source": [
         "# Calculate baseline results\n",
@@ -1210,12 +1210,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "421A3Z52E5jc",
-        "outputId": "4ca3e288-9af7-41b4-b165-1d55bc4071bf"
+        "outputId": "992dbb93-88c2-422b-fad4-3c2c36ee8c68"
       },
       "source": [
         "train_sentences[:10]"
       ],
-      "execution_count": 28,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1236,7 +1236,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 27
         }
       ]
     },
@@ -1247,7 +1247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gTZOvk2eCPtC",
-        "outputId": "6bd9665a-a1d4-45f1-e24e-3581b56c4fea"
+        "outputId": "a11ee805-c1ea-4938-db9c-a9a7addedeea"
       },
       "source": [
         "# How long is each sentence on average?\n",
@@ -1255,7 +1255,7 @@
         "avg_sent_len = np.mean(sent_lens)\n",
         "avg_sent_len"
       ],
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1267,7 +1267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 28
         }
       ]
     },
@@ -1279,14 +1279,14 @@
           "height": 265
         },
         "id": "ecfw5-PRFkHm",
-        "outputId": "ed67face-7165-4e9f-acc4-67185dff0d51"
+        "outputId": "6c9f2b70-3f90-4936-e1a7-2ffea9f5dc52"
       },
       "source": [
         "# What's the distribution look like ?\n",
         "import matplotlib.pyplot as plt\n",
         "plt.hist(sent_lens, bins=20);"
       ],
-      "execution_count": 31,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1310,14 +1310,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B4m_m1O4F9jp",
-        "outputId": "597c035d-8824-4b6d-e3c9-fbb0f40ee1cf"
+        "outputId": "67fc585d-a7dc-43e1-8b36-b9de828c63bf"
       },
       "source": [
         "# What percentile covers 95% of the sentence length\n",
         "output_seq_len = int(np.percentile(sent_lens, 95))\n",
         "output_seq_len"
       ],
-      "execution_count": 39,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1329,7 +1329,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 30
         }
       ]
     },
@@ -1340,13 +1340,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "87jFb2NHGeH5",
-        "outputId": "a13ed05e-c551-488d-f165-1f9030d6cb76"
+        "outputId": "fdd893af-d21a-4f01-b233-8ed7f9fd1d33"
       },
       "source": [
         "# Max sequence length in the training set\n",
         "max(sent_lens)"
       ],
-      "execution_count": 34,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1358,7 +1358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 31
         }
       ]
     },
@@ -1382,7 +1382,7 @@
         "# How many words are in our voab? (taken from table 2 in https://arxiv.org/pdf/1710.06071.pdf )\n",
         "max_tokens = 68000"
       ],
-      "execution_count": 40,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1404,7 +1404,7 @@
         "                                    pad_to_max_tokens = True) # default value\n",
         "                                    "
       ],
-      "execution_count": 43,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1416,7 +1416,7 @@
         "# Adapt text vectorizer to training sentences\n",
         "text_vectorizer.adapt(train_sentences)"
       ],
-      "execution_count": 44,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1426,7 +1426,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZJdl5aYeMcun",
-        "outputId": "81dbd8ab-af73-4b83-87e9-743d42976637"
+        "outputId": "81b6f32d-bed5-4382-9de5-81f4f62050c9"
       },
       "source": [
         "# Test out text vectorizer on random sentences\n",
@@ -1436,20 +1436,21 @@
         "print(f\"\\nLength of text: {len(target_sentence.split())}\")\n",
         "print(f\"\\nVectorized text:{text_vectorizer([target_sentence])}\")"
       ],
-      "execution_count": 55,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Text:\n",
-            "the aim of this study was to determine the level of middle ear pressure and alterations in middle ear pressure levels after septoplasty among the individuals having advanced degree isolated nasal septal deviation .\n",
+            "despite the benefit to patients , oac prescribing remains suboptimal in the united kingdom ( uk ) .\n",
             "\n",
-            "Length of text: 34\n",
+            "Length of text: 18\n",
             "\n",
-            "Vectorized text:[[   2  267    4   23   17   10    6  228    2  204    4 2063 3223  200\n",
-            "     3 3366    5 2063 3223  200   93   21 9055  116    2  348  956  588\n",
-            "   984 2141  750 5793 1551    0    0    0    0    0    0    0    0    0\n",
-            "     0    0    0    0    0    0    0    0    0    0    0    0    0]]\n"
+            "Vectorized text:[[  643     2   398     6    12 11487  2589   876  3274     5     2  1426\n",
+            "   4424  1404     0     0     0     0     0     0     0     0     0     0\n",
+            "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "      0     0     0     0     0     0     0     0     0     0     0     0\n",
+            "      0     0     0     0     0     0     0]]\n"
           ],
           "name": "stdout"
         }
@@ -1462,7 +1463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bfn3hJHHN9GS",
-        "outputId": "7898b28c-3b95-47f5-f915-41c063555043"
+        "outputId": "08350684-6170-469a-b111-e6b311952d56"
       },
       "source": [
         "# How many words in our training vocabulary ?\n",
@@ -1471,7 +1472,7 @@
         "print(f\"Most common words in the vocab : {rct_20k_text_vocab[:5]}\")\n",
         "print(f\"Least common words in the vocab :v{rct_20k_text_vocab[-5:]}\")"
       ],
-      "execution_count": 58,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1481,6 +1482,45 @@
             "Least common words in the vocab :v['aainduced', 'aaigroup', 'aachener', 'aachen', 'aaacp']\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nMQvZh2LUyeb",
+        "outputId": "6d32ae82-afaf-440c-f058-bb9429e7ec33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get the config of our text vectorizer\n",
+        "text_vectorizer.get_config()"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'dtype': 'string',\n",
+              " 'max_tokens': 68000,\n",
+              " 'name': 'text_vectorization',\n",
+              " 'ngrams': None,\n",
+              " 'output_mode': 'int',\n",
+              " 'output_sequence_length': 55,\n",
+              " 'pad_to_max_tokens': True,\n",
+              " 'split': 'whitespace',\n",
+              " 'standardize': 'lower_and_strip_punctuation',\n",
+              " 'trainable': True,\n",
+              " 'vocabulary_size': 64841}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
         }
       ]
     },
@@ -1501,7 +1541,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     }
   ]
