--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -1569,11 +1569,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b7gVJcftsz0u",
-        "outputId": "fbca677d-473d-4e2b-e2b3-43576096b47c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b7gVJcftsz0u",
+        "outputId": "fbca677d-473d-4e2b-e2b3-43576096b47c"
       },
       "source": [
         "# Show example embedding\n",
@@ -1621,26 +1621,46 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "dWv2gvF3tq4k"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## Creating datasets(making sure our data loads as fast as possible)\n",
+        "We're going to setup our data to run as fast as possible with the TensorFlow tf.data API, many of the steps are discussed at length in these 2 resources :\n",
+        "\n",
+        "* https://www.tensorflow.org/guide/data_performance\n",
+        "* https://www.tensorflow.org/guide/data"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KNJiS3CUrqcw"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "id": "KNJiS3CUrqcw",
+        "outputId": "f3d8a315-afc1-4d15-c789-7f9ac8adc9a1"
       },
       "source": [
-        ""
+        "# Turn our data into TensorFlow Datasets\n",
+        "train_dataset = tf.data.Datasets.from_tensor_slices"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-46-56d24a696c54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Turn our data into TensorFlow Datasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_tensor_slices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow._api.v2.data' has no attribute 'Datasets'"
+          ]
+        }
+      ]
     }
   ]
 }
