262. Model 1: Building, fitting and evaluating a Conv1D with token embeddings

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -1666,11 +1666,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qk49qJJ0pPpK",
-        "outputId": "31a6dcdc-4429-49c9-ea8d-86b8d87023e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Qk49qJJ0pPpK",
+        "outputId": "31a6dcdc-4429-49c9-ea8d-86b8d87023e8"
       },
       "source": [
         "train_labels_one_hot.shape, train_labels_one_hot[0]"
@@ -1694,11 +1694,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rGWneWL9pBBn",
-        "outputId": "c346ecbd-fb45-4713-86ee-02ddcaa748b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rGWneWL9pBBn",
+        "outputId": "c346ecbd-fb45-4713-86ee-02ddcaa748b7"
       },
       "source": [
         "# Take the TensorSliceDataset's and turn them into prefetch dataset\n",
@@ -1723,6 +1723,400 @@
             "tags": []
           },
           "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GDDGepFwtDYB"
+      },
+      "source": [
+        "# Model 1 : Conv1D with token embeddings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FSYD2Symrjui"
+      },
+      "source": [
+        "# Create 1D conv model to process sequences\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "inputs = layers.Input(shape=(1, ), dtype=\"string\")\n",
+        "text_vectors = text_vectorizer(inputs) # vectorize text inputs\n",
+        "token_embeddings = token_embed(text_vectors)  # create embeddings\n",
+        "x = layers.Conv1D(filters = 64, # number of hidden units\n",
+        "                  kernel_size = 5, # take 5 words at a time n-gram = 5\n",
+        "                  strides=1, # default value\n",
+        "                  padding=\"same\", # default value\n",
+        "                  activation=\"relu\" \n",
+        "                  )(token_embeddings)\n",
+        "x = layers.GlobalAveragePooling1D()(x)\n",
+        "outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
+        "model_1 = tf.keras.Model(inputs, outputs)\n"
+      ],
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AbQ_r1pLtq_n"
+      },
+      "source": [
+        "# Compile model 1\n",
+        "model_1.compile(loss=\"categorical_crossentropy\",\n",
+        "                optimizer = tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n"
+      ],
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_VGJfT6DujQz",
+        "outputId": "a0dc3df2-8273-45a1-93d5-3c4cfd749f47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_1.summary()"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_1\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_2 (InputLayer)         [(None, 1)]               0         \n",
+            "_________________________________________________________________\n",
+            "text_vectorization (TextVect (None, 55)                0         \n",
+            "_________________________________________________________________\n",
+            "token_embedding (Embedding)  (None, 55, 128)           8299648   \n",
+            "_________________________________________________________________\n",
+            "conv1d_1 (Conv1D)            (None, 55, 64)            41024     \n",
+            "_________________________________________________________________\n",
+            "global_average_pooling1d_1 ( (None, 64)                0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 5)                 325       \n",
+            "=================================================================\n",
+            "Total params: 8,340,997\n",
+            "Trainable params: 8,340,997\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1j1ldhQtu5JO"
+      },
+      "source": [
+        "from helper_functions import create_tensorboard_callback\n",
+        "SAVE_DIR = \"milestone_project_experiments\""
+      ],
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HX0UUHfJvghj",
+        "outputId": "5fead507-9cf8-42f9-a20f-16c45c925361",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_dataset"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<PrefetchDataset shapes: ((None,), (None, 5)), types: (tf.string, tf.float64)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oYZQvNj6viW4",
+        "outputId": "87177924-ee93-4759-980f-7081fb589f76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(train_dataset)  * 32 #(batch size)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "180064"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qGq_Xh3vubxX",
+        "outputId": "3f9458a4-bd55-4807-cea8-8adf61b43e0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fit the model\n",
+        "history_model_1 = model_1.fit(train_dataset,\n",
+        "                              steps_per_epoch= int(0.1 * len(train_dataset)), # only train on 10% of the total training batchs\n",
+        "                              epochs=3,\n",
+        "                              validation_data = valid_dataset,\n",
+        "                              validation_steps =int(0.1 * len(valid_dataset))) # only validate on 10% of the batches\n"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "562/562 [==============================] - 76s 80ms/step - loss: 0.9177 - accuracy: 0.6381 - val_loss: 0.6825 - val_accuracy: 0.7404\n",
+            "Epoch 2/3\n",
+            "562/562 [==============================] - 45s 80ms/step - loss: 0.6586 - accuracy: 0.7570 - val_loss: 0.6296 - val_accuracy: 0.7759\n",
+            "Epoch 3/3\n",
+            "562/562 [==============================] - 44s 78ms/step - loss: 0.6185 - accuracy: 0.7764 - val_loss: 0.5965 - val_accuracy: 0.7862\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4MokEZAKw-sx",
+        "outputId": "8180f1b7-4b5c-47c2-de53-947621d49956",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate on whole dataset\n",
+        "results_model_1 = model_1.evaluate(valid_dataset)\n",
+        "results_model_1"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "945/945 [==============================] - 3s 4ms/step - loss: 0.6003 - accuracy: 0.7856\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6002566814422607, 0.7856149673461914]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5-YRmRV6xJW2",
+        "outputId": "ec4a91b2-5fa0-4ccb-def2-01baf93fbd9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions (our model predicts predictions probabilities for each class)\n",
+        "model_1_pred_probs = model_1.predict(valid_dataset)\n",
+        "model_1_pred_probs, model_1_pred_probs.shape"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[4.2660061e-01, 1.9619185e-01, 8.7021582e-02, 2.6121801e-01,\n",
+              "         2.8967896e-02],\n",
+              "        [4.2092186e-01, 2.8814888e-01, 1.2741602e-02, 2.7075264e-01,\n",
+              "         7.4350103e-03],\n",
+              "        [1.4138255e-01, 1.1415213e-02, 1.9249354e-03, 8.4523720e-01,\n",
+              "         4.0129256e-05],\n",
+              "        ...,\n",
+              "        [8.0698928e-06, 7.8779605e-04, 8.4765151e-04, 3.1442676e-06,\n",
+              "         9.9835336e-01],\n",
+              "        [6.3106313e-02, 4.0959969e-01, 1.1172352e-01, 7.5119205e-02,\n",
+              "         3.4045133e-01],\n",
+              "        [1.9318168e-01, 6.4292341e-01, 3.8884606e-02, 4.7878176e-02,\n",
+              "         7.7132083e-02]], dtype=float32), (30212, 5))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ag47js0q0kxO",
+        "outputId": "2e4ca5bc-5788-40a6-97d1-33b6472d348a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert pred probs to classes\n",
+        "model_1_preds = tf.argmax(model_1_pred_probs, axis=1)\n",
+        "model_1_preds"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(30212,), dtype=int64, numpy=array([0, 0, 3, ..., 4, 1, 1])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sva-7qO302WQ",
+        "outputId": "c1977347-dd3e-4227-9bb7-99e41ae1d54a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "class_names"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['BACKGROUND', 'CONCLUSIONS', 'METHODS', 'OBJECTIVE', 'RESULTS'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "seGAlvhj07ko",
+        "outputId": "0c651924-f7f2-4d8e-95df-455c3bcfe8ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate model_1_results = \n",
+        "model_1_results = calculate_results(y_true = val_labels_encoded,\n",
+        "                                    y_pred = model_1_preds)\n",
+        "model_1_results"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 78.56149874222163,\n",
+              " 'f1': 0.7832115400346007,\n",
+              " 'precision': 0.7824668404856262,\n",
+              " 'recall': 0.7856149874222164}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aJLA-wQY1KBX",
+        "outputId": "d74186ba-2f56-40ed-f98c-761deeff4010",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "baseline_results"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 72.1832384482987,\n",
+              " 'f1': 0.6989250353450294,\n",
+              " 'precision': 0.7186466952323352,\n",
+              " 'recall': 0.7218323844829869}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
         }
       ]
     }
